src/css/RequestProgress.css
.request-progress-container {
  position: fixed;
  right: 15px;
  bottom: 15px;
  background-color: rgba(30, 30, 30, .8);
  color: var(--main-bg);
  padding: 10px 20px;
  border-radius: 15px;
  z-index: 2;
  -webkit-box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.4);
  -moz-box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.4);
  box-shadow: 2px 2px 5px 0px rgba(50, 50, 50, 0.4);
  padding: 10px 10px 10px 20px;
}

.progress-header {
  font-weight: 600;
  margin-bottom: 15px;
}

.close-progress-button {
  float: right;
  background: none;
  border: none;
  color: var(--main-bg);
}

.close-progress-button:hover {
  cursor: pointer;
  color: var(--red);
}

.progress-content-container {
  overflow-y: scroll;
  max-height: 400px;
  max-width: 350px;
}

